Move mmu.c and mmu.h

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -1,6 +1,6 @@
 C_FILES   = $(wildcard *.c) $(wildcard */*.c)
 ASM_FILES = $(wildcard *.S) $(wildcard */*.S)
-OBJ_FILES = $(C_FILES:%.c=%_c.o) $(ASM_FILES:%.S=%_s.o)
+OBJ_FILES = $(C_FILES:%.c=%.c.o) $(ASM_FILES:%.S=%.s.o)
 
 TOOLCHAIN = /Applications/ARM/bin
 GCC_FLAGS = -O2 -Wall -Wextra -ffreestanding -nostdinc -nostdlib -nostartfiles -mcpu=cortex-a53+nosimd -D${RPI} -I../../include/kernel
@@ -9,10 +9,10 @@ ASM_FLAGS =  -I../../include/kernel
 .PHONY: clean
 all: clean kernel8.img
 
-%_s.o: %.S
+%.s.o: %.S
 	$(TOOLCHAIN)/aarch64-none-elf-gcc $(ASM_FLAGS) -c $< -o $@
 
-%_c.o: %.c
+%.c.o: %.c
 	$(TOOLCHAIN)/aarch64-none-elf-gcc $(GCC_FLAGS) -c $< -o $@
 
 kernel8.img: $(OBJ_FILES)
